--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title>Index</title>
 </head>
 <body>
-    <h1 id="heading">Hello Blog!</h1>
+    <h1 id="heading">My Personal Blog!</h1>
 </body>
 
